--- a/app/views/transporte/_tabelle_anlagen.html.erb
+++ b/app/views/transporte/_tabelle_anlagen.html.erb
@@ -19,7 +19,7 @@
     <tbody>
       <% transporte.each do |transport| %>
         <tr>
-          <td><%= link_to transport.datum, transport %></td>
+          <td><%= link_to l(transport.datum), transport %></td>
           <td><%= link_to transport.stoff, transport.stoff %></td>
           <% if mode == :an %>
             <td><%= link_to transport.start_anlage, transport.start_anlage %></td>
