--- a/app/views/transporte/_show_transport_grunddaten.html.erb
+++ b/app/views/transporte/_show_transport_grunddaten.html.erb
@@ -4,7 +4,7 @@
   <div class="col-sm-7">
     <p>
       <strong>Datum:</strong>
-      <%= transport.datum %>
+      <%= l transport.datum %>
     </p>
 
     <p>
