small layout fixes

--- a/app/views/beobachtungen/index.html.erb
+++ b/app/views/beobachtungen/index.html.erb
@@ -1,14 +1,14 @@
-<div class="btn-group header-buttons">
-  <%= link_to 'Neue Beobachtung', new_beobachtung_path, class: "btn btn-success" %>
-</div>
-
-<h1>Beobachtungen</h1>
+<h1>
+  Beobachtungen
+  <div class="btn-group header-buttons">
+    <%= link_to 'Neue Beobachtung', new_beobachtung_path, class: "btn btn-success" %>
+  </div>
+</h1>
 
 <p>
   Angezeigt werden zunächst die neuen Beobachtungen, das heißt alle, die noch keinem Transportabschnitt zugewiesen wurden.
   Diese können dann einzeln angeschaut und Transportabschnitten zugewiesen werden.
 </p>
-
 
 <div class="row">
   <div class="col-sm-3">
