--- a/app/views/beobachtungen/show.html.erb
+++ b/app/views/beobachtungen/show.html.erb
@@ -1,12 +1,12 @@
-<% if is_editor? %>
-  <div class="btn-group header-buttons">
-    <%= link_to 'Alle Beobachtungen', beobachtungen_path, class: "btn btn-primary" %>
-    <%= link_to 'Bearbeiten', edit_beobachtung_path(@beobachtung), class: "btn btn-primary" %>
-    <%= link_to 'Löschen', @beobachtung, method: :delete, data: { confirm: 'Willst du die Beobachtung wirklich löschen?' }, class: "btn btn-danger" %></td>
-  </div>
-<% end %>
-
-<h2>Beobachtung aus <%= @beobachtung.ort %></h2>
+<h1>Beobachtung aus <%= @beobachtung.ort %>
+  <% if is_editor? %>
+    <div class="btn-group header-buttons">
+      <%= link_to 'Alle Beobachtungen', beobachtungen_path, class: "btn btn-primary" %>
+      <%= link_to 'Bearbeiten', edit_beobachtung_path(@beobachtung), class: "btn btn-primary" %>
+      <%= link_to 'Löschen', @beobachtung, method: :delete, data: { confirm: 'Willst du die Beobachtung wirklich löschen?' }, class: "btn btn-danger" %></td>
+    </div>
+  <% end %>
+</h1>
 
 <p id="notice"><%= notice %></p>
 
