--- a/app/views/stoffe/index.html.erb
+++ b/app/views/stoffe/index.html.erb
@@ -1,8 +1,9 @@
-<div class="btn-group header-buttons">
-  <%= link_to 'Neuen Stoff erstellen', new_stoff_path, class: "btn btn-success" %>
-</div>
-
-<h1>Radioaktive Stoffe</h1>
+<h1>
+  Radioaktive Stoffe
+  <div class="btn-group header-buttons">
+    <%= link_to 'Neuen Stoff erstellen', new_stoff_path, class: "btn btn-success" %>
+  </div>
+</h1>
 
 <table class="table table-striped">
   <thead>
