--- a/app/views/transporte/index.html.erb
+++ b/app/views/transporte/index.html.erb
@@ -1,8 +1,9 @@
-<div class="btn-group header-buttons">
-  <%= link_to 'Neuer Transport', new_transport_path, class: "btn btn-success" %>
-</div>
-
-<h1>Transporte</h1>
+<h1>
+  Transporte
+  <div class="btn-group header-buttons">
+    <%= link_to 'Neuer Transport', new_transport_path, class: "btn btn-success" %>
+  </div>
+</h1>
 
 <div class="row">
 
