--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -58,7 +58,7 @@
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <% if is_admin? %>
-            <li><%= link_to "Benutzerverwaltung", users_path %></li>
+            <li><%= link_to "BenutzerInnen-Verwaltung", users_path %></li>
           <% end %>
           <li class="dropdown">
             <button type="button" class="btn btn-default navbar-btn dropdown-toggle" data-toggle="dropdown">
