--- a/app/views/abfragen/_anlagen_auswahl_panel.html.erb
+++ b/app/views/abfragen/_anlagen_auswahl_panel.html.erb
@@ -1,32 +1,37 @@
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title"><%= typ %>-Anlage </h3>
-      </div>
-      <div class="row">
-        <div class="col-sm-3">
-		    <%= check_box_tag "#{typ}-alle" %>
-		    Alle
-        </div>
-        <div class="col-sm-3">
-          <h3 class="panel-title">Anlagen-Kategorie</h3>
-          Einschränkung der auszuwählenden Anlagen.
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
-            Anlagen-Auswahl
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu" >
-	      <li><%= link_to "Alle", abfragen_index_path , class: "list-group-item" %></li>
-              <% anlagen_kategorien.each do |kategorie| %>
-                <li>
-                    <%= link_to kategorie.name, abfragen_index_path(typ_kategorie.to_sym => kategorie.id), class: "list-group-item" %>
-                </li>
-              <% end %>
-          </ul>
-        </div>
-        <div class="col-sm-3">
-            <h3 class="panel-title">Anlagen-Auswahl</h3>
-		    <%= select_tag "#{typ}[]", options_from_collection_for_select(anlagen_auswahl, "id", "name"), :multiple=>true %>
-        </div>
-      </div>    
-      
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title"><%= typ %>-Anlage </h3>
+  </div>
+  <div class="panel-body">
+  
+    <div class="checkbox">
+      <label>
+        <%= check_box_tag "#{typ}-alle" %> Alle
+      </label>
     </div>
+
+    <div class="form-group">
+      <label>Anlagen-Kategorie</label>
+      <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+          Anlagen-Auswahl
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+          <li><%= link_to "Alle", abfragen_index_path , class: "list-group-item" %></li>
+          <% anlagen_kategorien.each do |kategorie| %>
+            <li role="presentation">
+              <%= link_to kategorie.name, abfragen_index_path(typ_kategorie.to_sym => kategorie.id), role: "menuitem" %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <label>Anlagen-Auswahl</label>
+      <%= select_tag "#{typ}[]", options_from_collection_for_select(anlagen_auswahl, "id", "name"), :multiple=>true, class: 'form-control' %>
+    </div>
+    
+  </div>    
+</div>
