Darstellung Abfrage-Ergebnisse

--- a/app/views/abfragen/show.html.erb
+++ b/app/views/abfragen/show.html.erb
@@ -1,26 +1,29 @@
 <h1>Ausgewählte Transporte</h1>
-<p><%= @dort %></p>
-<p> Zeitraum: <%= @zeitraum %></p>
-<p> Stoffe : <%= @stoffe ? @stoffe : "Alle" %> </p>
-<p> Start-Anlagen : <%= @start_anlagen ? @start_anlagen : "Alle"  %> </p>
-<p> Ziel-Anlagen : <%= @ziel_anlagen ? @ziel_anlagen : "Alle" %> </p>
-<p> Verkehrsträger: <%= @verkehrstraeger %></p>
-<div class="col-sm-9">
-    <%= render 'transporte/tabelle' %>
-</div>
 
-<% params %>
+<div class="row">
 
-<%= form_tag({action: :calendar}, multipart: true) do %>
-
-  <% @transporte.each do |trans| %>
-    <%= hidden_field_tag "transport_#{trans.id}", trans.id %>
-  <% end %>
-  
-  <%= hidden_field_tag "year", @year %> 
-
-  <div class="col-sm-4">
-    <%= submit_tag "In Kalenderdarstellung anzeigen", class: "btn btn-primary" %>
+  <div class="col-sm-8">
+    <p><%= @dort %></p>
+    <p> Zeitraum: <%= @zeitraum %></p>
+    <p> Stoffe : <%= @stoffe ? @stoffe : "Alle" %> </p>
+    <p> Start-Anlagen : <%= @start_anlagen ? @start_anlagen : "Alle"  %> </p>
+    <p> Ziel-Anlagen : <%= @ziel_anlagen ? @ziel_anlagen : "Alle" %> </p>
+    <p> Verkehrsträger: <%= @verkehrstraeger %></p>
   </div>
   
-<% end %>
+  <div class="col-sm-4">
+    <% params %>
+    <%= form_tag({action: :calendar}, multipart: true) do %>
+      <% @transporte.each do |trans| %>
+        <%= hidden_field_tag "transport_#{trans.id}", trans.id %>
+      <% end %>  
+      <%= hidden_field_tag "year", @year %> 
+      <%= submit_tag "In Kalenderdarstellung anzeigen", class: "btn btn-primary pull-right" %>
+    <% end %>
+  </div>
+  
+</div>
+
+<%= render 'transporte/tabelle' %>
+
+
