--- a/app/views/upload/upload_file.html.erb
+++ b/app/views/upload/upload_file.html.erb
@@ -26,7 +26,7 @@
     </div>
     
     <div class="panel-footer">
-      <%= submit_tag "Anlagen erkennen", class: "btn btn-primary" %>
+      <%= submit_tag "Atomanlagen erkennen", class: "btn btn-primary" %>
     </div>
   <% end %>
 </div>
