--- a/app/views/orte/search_in_map.js.erb
+++ b/app/views/orte/search_in_map.js.erb
@@ -1,2 +1,2 @@
 // Erzeugt das Ortseingabeformular neu mit gesuchtem Ort.
-$('#mapedit').replaceWith("<%= j render "orte/ort_eingabe", titel: "Standort", ort: @ort %>");
+$('#mapedit').replaceWith("<%= j render "orte/ort_eingabe", titel: "Standort", ort: @ort, titel: @titel %>");
