--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -13,7 +13,7 @@
   
   <div class="row">
     <div class="col-sm-6">      
-      <div class="panel panel-default" id="mapedit" >
+      <div class="panel panel-default" id="beobachtung_grunddaten" >
         <div class="panel-heading">
           <h3 class="panel-title">Richtung und Zeit</h3>
         </div>
@@ -75,7 +75,7 @@
 
   </div>
        
-  <div class="panel panel-default" id="mapedit" >
+  <div class="panel panel-default" id="beobachtung_kennzeichnung" >
     <div class="panel-heading">
       <h3 class="panel-title">Kennzeichnung</h3>
     </div>    
